- drakx-in-chroot:
  o advise to install xephyr if missing

Version 16.14 - 10 December 2013

- Mageia 4 beta 2 left background

Version 16.13 - 10 December 2013

- fix crash when selecting an input method (mga#11939)

Version 16.10 - 6 December 2013

- package group selection:
  o make bottom buttons always available
    (by puting the scrolling window only around the package group check boxes)

Version 16.9 - 6 December 2013

- fix retrieving network info from stage2 after dracut migration (mga#11504)

Version 16.7 - 5 December 2013

- partitioning:
  o fix a crash when creating partitions (mga#11876)

Version 16.6 - 4 December 2013

- fix blue background behind left panel text (mga#11866)

Version 16.5 - 3 December 2013

- partitioning:
  o detect eMMc block devices (Luc Menut, mga#11812)
  o fix a crash in partitioning wizard (mga#11820)
  o show labels on partition buttons again but ellipsized (mga#11858)

Version 16.4 - 2 December 2013

- fix partitioning wizard moving the main window to left (mga#11790)
- fix titles not being blue anymore

Version 16.2 - 29 November 2013

- no more run urpmi.update when adding media
  (uneeded with urpmi-7.27+)

Version 16.1 - 28 November 2013

- fix a warning: include dialog-warning-symbolic
- fix left panel text being black instead of white (mga#11792)
- fix calling "child1_shrink" via package "Gtk3::HPaned" (mga#11797)
- fix using old toolbar API that is no more available (mga#11791)
- wrap too big labels in summary dialog (mga#11793)

Version 16.0 - 23 November 2013

- switch from Gtk+-2 to Gtk+-3:
  o Banners: most themes work OK but Oxygen-gtk3...
  o diskdrake: most themes work OK but Oxygen-gtk3...
- detect_devices:
  fix ids to be numeric
- drakx-in-chroot:
  o add --depth in order to force 16bit colors mode

Version 15.73.1 - 19 November 2013

- debug image:
  o include enough python in order to generate a stack trace from within stage2
  o fix passing arguments from drakx-in-chroot