@@ -1,3 +1,5 @@
+- media step:
+  o hint that nonfree is needed if a CPU needs a microcode
 - drakx-in-chroot:
   o advise to install xephyr if missing
 
